--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,20 @@
-.headerContainer{
+body {
+    margin: 0px;
+    padding: 0px;
+    background: #F3F3F3;
+}
+
+.headerContainer {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
+}
+
+.headerName {
+    color: #1C1B1B;
+    font-family: Inter;
+    font-size: 32px;
+    font-weight: bolder;
+    padding: 20px 0px;
+    text-align: center;
 }
